fixed shorter titles shifting content

--- a/src/less/forum.less
+++ b/src/less/forum.less
@@ -8,6 +8,8 @@
         right: 0;
         top: 0;
 
+        flex-grow: 0 !important;
+
         margin-right: -10px;
         margin-left: -20px;
         margin-top: -20px;
@@ -92,6 +94,12 @@
                 }
             }
         }
+    }
+
+    > img {
+        width: 257px;
+        height: 145px;
+        object-fit: cover;
     }
 }
 
